@@ -76,6 +76,7 @@
 		/* Now that we've got the message, unlock the queue */
 		pthread_mutex_unlock(&mutex);
 		
+		BOOL concreteType = NO;	
 		EtoileThreadProxyReturn * retVal = nil;
 		if([[anInvocation methodSignature] methodReturnType][0] == '@')
 		{
@@ -83,7 +84,18 @@
 			[returns removeObjectAtIndex:0];
 			//TODO: Implement auto-boxing for non-object returns
 		}
+		else
+		{
+			concreteType = YES;
+		}
+
 		[anInvocation invokeWithTarget:object];
+
+		if (concreteType == YES)
+		{
+			[anInvocation release];
+		}
+
 		if(retVal != nil)
 		{
 			id realReturn;
@@ -97,6 +109,8 @@
 			*/
 			//[retVal release];
 		}
+
+		[anInvocation release];
 		[pool release];
 	}
 }
@@ -113,10 +127,14 @@
 
 - (void)forwardInvocation:(NSInvocation *)anInvocation
 {
+	BOOL concreteType = NO;
+	int rc = 0;
+
 	if(![anInvocation argumentsRetained])
 	{
 		[anInvocation retainArguments];
 	}
+
 	if([[anInvocation methodSignature] methodReturnType][0] == '@')
 	{
 		EtoileThreadProxyReturn * retVal = [[[EtoileThreadProxyReturn alloc] init] autorelease];
@@ -129,11 +147,40 @@
 		[anInvocation setSelector:@selector(returnProxy)];
 		[anInvocation invokeWithTarget:self];
 		[anInvocation setSelector:selector];
-		//TODO: Implement auto-boxing for non-object returns
 	}
+	else
+	{
+		/*
+		 * This is a hack.. if the method returns a concrete type (eg not an object)
+		 * the result is immediately assigned as soon a forwardInvocation: ends. 
+                 * As the invocation is not yet invoked, that means we get default values instead
+		 * of the correct returned value (eg, with a method returning an int, say 42, 
+		 * the actual value returned will be 0)
+		 * But as we can't call the invocation ourself (that would break the invocations order)
+		 * we need to wait until the runloop invoke it. We could use a condition variable
+		 * to signal that the invocation is ready, but a faster way is to poll until the invocation
+		 * is done (no context switch that way). 
+		 * There doesn't seem to be a method returning the invocation status, therefore
+		 * we simply increment the retain count before adding the invocation to the runloop.
+		 * In the runloop we decrement the retain count once the invocation is invoked, and we
+		 * just wait until the retain count equals the original count.
+		 */
+		rc = [anInvocation retainCount];
+		[anInvocation retain];
+		concreteType = YES;
+	}
+
 	pthread_mutex_lock(&mutex);
 	[invocations addObject:anInvocation];
 	pthread_cond_signal(&conditionVariable);
 	pthread_mutex_unlock(&mutex);
+
+	if (concreteType)
+	{
+		while ([anInvocation retainCount] > rc) 
+		{
+			// do nothing... just poll...
+		}
+	}
 }
 @end
